--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ tomtoolkit==2.24.5
 tom-alertstreams
 tom-mmt @ git+https://github.com/griffin-h/tom_mmt
 tom-nonlocalizedevents @ git+https://github.com/TOMToolkit/tom_nonlocalizedevents.git
+tom-registration
 tom-swift==0.2.0
 paramiko
 plotly
