--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ venv/
 candidate_vetting/vetting_app/vetting_app/settings_local.py
 MPCORB.csv
 ztf-forced-phot-logs/
+ztf-forced-phot-logs-backup/
