--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ ligo.skymap
 matplotlib
 numpy
 tomtoolkit==2.30.1
-tom-alertstreams
+tom-alertstreams==1.2.1
 tom-antares
 tom-mmt @ git+https://github.com/griffin-h/tom_mmt
 tom-nonlocalizedevents @ git+https://github.com/TOMToolkit/tom_nonlocalizedevents.git
